@@ -1,5 +1,4 @@
-package lp.jobify.config;
-
+// DataInitializer.java
 import lp.jobify.model.Candidato;
 import lp.jobify.model.Recrutador;
 import lp.jobify.model.Vaga;
@@ -12,7 +11,6 @@ import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Component;
 
 import java.util.Arrays;
-import java.util.Date;
 import java.util.List;
 
 @Component
@@ -26,45 +24,34 @@ public class DataInitializer implements CommandLineRunner {
     @Autowired
     private VagaRepository vagaRepository;
 
-        @Override
-    public void run(String... args) throws Exception {
+    @Override
+    public void run(String... args) {
+        // Verificar se já existem dados
+        if (candidatoRepository.count() == 0 && recrutadorRepository.count() == 0 && vagaRepository.count() == 0) {
 
-        // Criar Candidatos
-            Candidato candidato1 = new Candidato("João Silva", "joao.silva@email.com", "Java, Spring", "Desenvolvedor Java", "João_Silva");
-            Candidato candidato2 = new Candidato("Maria Souza", "maria.souza@email.com", "Python, Data Science", "Cientista de Dados", "Maria_Souza");
-            Candidato candidato3 = new Candidato("Pedro Santos", "pedro.santos@email.com", "C++, Desenvolvimento de Jogos", "Desenvolvedor C++", "Pedro_Santos");
+            List<Candidato> candidatos = Arrays.asList(
+                    new Candidato("João Silva", "joao.silva@email.com", "Java, Spring Boot, Microservices", "Desenvolvedor Java Sênior", "senha123"),
+                    new Candidato("Maria Souza", "maria.souza@email.com", "Python, Machine Learning, Data Analysis", "Cientista de Dados", "senha456"),
+                    new Candidato("Pedro Santos", "pedro.santos@email.com", "React, Angular, JavaScript", "Desenvolvedor Front-End", "senha789")
+            );
+            candidatoRepository.saveAll(candidatos);
 
-        candidatoRepository.saveAll(Arrays.asList(candidato1, candidato2, candidato3));
+            List<Recrutador> recrutadores = Arrays.asList(
+                    new Recrutador("Empresa A", "recrutadorA@email.com", "Empresa A", "senhaABC"),
+                    new Recrutador("Empresa B", "recrutadorB@email.com", "Empresa B", "senhaDEF"),
+                    new Recrutador("Empresa C", "recrutadorC@email.com", "Empresa C", "senhaGHI")
+            );
+            recrutadorRepository.saveAll(recrutadores);
 
-        // Criar Recrutadores
-            Recrutador recrutador1 = new Recrutador("Tech Recruiter 1", "recrutador1@empresaA.com", "Empresa A", "Empresa A");
-            Recrutador recrutador2 = new Recrutador("Tech Recruiter 2", "recrutador2@empresaB.com", "Empresa B", "Empresa B");
-            Recrutador recrutador3 = new Recrutador("Tech Recruiter 3", "recrutador3@empresaC.com", "Empresa C", "Empresa C");
-
-        recrutadorRepository.saveAll(Arrays.asList(recrutador1, recrutador2, recrutador3));
-
-
-        // Criar Vagas (associadas aos recrutadores)
-        Vaga vaga1 = new Vaga("Desenvolvedor Java", "Experiência em Java e Spring", "Empresa A", "São Paulo", new Date(), "CLT", null, null, Arrays.asList("Java", "Spring"));
-        vaga1.setRecrutador(recrutador1); // Associar a vaga ao recrutador
-
-        Vaga vaga2 = new Vaga("Analista de Dados", "Experiência em Python e Data Science", "Empresa A", "Remoto", new Date(), "PJ", null, null, Arrays.asList("Python", "Data Science"));
-        vaga2.setRecrutador(recrutador1);
-
-        Vaga vaga3 = new Vaga("Desenvolvedor Python", "Forte em Python", "Empresa B", "Rio de Janeiro", new Date(), "CLT", null, null, List.of("Python"));
-        vaga3.setRecrutador(recrutador2);
-
-        Vaga vaga4 = new Vaga("Cientista de Dados Júnior", "Iniciante em Data Science", "Empresa B", "Remoto", new Date(), "PJ", null, null, List.of("Data Science"));
-        vaga4.setRecrutador(recrutador2);
-
-        Vaga vaga5 = new Vaga("Desenvolvedor C++", "Experiência em C++ e Unreal Engine", "Empresa C", "São Paulo", new Date(), "CLT", null, null, Arrays.asList("C++", "Unreal Engine"));
-        vaga5.setRecrutador(recrutador3);
-
-        Vaga vaga6 = new Vaga("Desenvolvedor de Jogos", "Experiência em Unity", "Empresa C", "Remoto", new Date(), "PJ", null, null, List.of("Unity"));
-        vaga6.setRecrutador(recrutador3);
-
-        vagaRepository.saveAll(Arrays.asList(vaga1, vaga2, vaga3, vaga4, vaga5, vaga6));
+            List<Vaga> vagas = Arrays.asList(
+                    new Vaga("Desenvolvedor(a) Java Back-end", "Experiência com Spring Boot e Microsserviços.  Desenvolvimento de APIs RESTful.", recrutadores.get(0), "São Paulo", "CLT", "Java, Spring Boot, Git"),
+                    new Vaga("Cientista de Dados Júnior", "Conhecimento em Python e bibliotecas de Machine Learning.  Análise de dados e visualização.", recrutadores.get(0), "Remoto", "PJ", "Python, Machine Learning, Pandas, Scikit-learn"),
+                    new Vaga("Desenvolvedor(a) Front-end React", "Domínio de React, Redux e outras bibliotecas.  Experiência com testes unitários e integração.", recrutadores.get(1), "Rio de Janeiro", "CLT", "React, Redux, JavaScript, HTML, CSS"),
+                    new Vaga("Estágio em Desenvolvimento Web", "Conhecimento básico em HTML, CSS e JavaScript.  Vontade de aprender e se desenvolver na área.", recrutadores.get(1), "São Paulo", "Estágio", "HTML, CSS, JavaScript"),
+                    new Vaga("Engenheiro(a) de Software Sênior", "Experiência com desenvolvimento em nuvem (AWS ou Azure).  Arquitetura de microsserviços e design patterns.", recrutadores.get(2), "Remoto", "CLT", "Java, Python, Cloud Computing, Microsserviços"),
+                    new Vaga("Analista de Dados Sênior", "Experiência com Big Data e ferramentas de análise de dados.  Conhecimento em estatística e modelagem.", recrutadores.get(2), "São Paulo", "PJ", "Python, R, Big Data, Hadoop, Spark")
+            );
+            vagaRepository.saveAll(vagas);
+        }
     }
 }
-
-
